# libxi

./: .gitmodules  CMakeLists.txt  README.md
lib/chck/: CMakeLists.txt
src/: CMakeLists.txt  xi-info.c  xi.c  xi.h
