CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(libxi)
SET(LIBXI_NAME "libxi")
SET(LIBXI_DESCRIPTION "Tools for loading and editing FFXI data files")
SET(LIBXI_VERSION "0.0.1")
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${libxi_SOURCE_DIR}/CMake)

# Warnings
IF (MSVC)
   IF (CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
      STRING(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
   ELSE ()
      SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
   ENDIF ()
ELSEIF (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX)
   SET(CMAKE_C_FLAGS   "${CMAKE_C_FLAGS}   -Wall -Wextra -Wno-variadic-macros -Wno-long-long")
   SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wno-variadic-macros -Wno-long-long")
ENDIF ()

ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(src)
