SET(LIBXI_SRC
   xi.c
)

# include directories
INCLUDE_DIRECTORIES(
   ${libxi_SOURCE_DIR}/src
   ${chckXi_SOURCE_DIR}/src
)

IF (UNIX AND (CMAKE_COMPILER_IS_GNUCC OR CMAKE_COMPILER_IS_GNUCXX))
   SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
   IF (${CMAKE_VERSION} VERSION_LESS 2.8.9)
      ADD_DEFINITIONS(-fPIC)
   ENDIF ()
ENDIF ()

ADD_DEFINITIONS(-std=c99)

# compile libxi
ADD_LIBRARY(xi ${LIBXI_SRC})
SET_TARGET_PROPERTIES(xi PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${libxi_BINARY_DIR})
TARGET_LINK_LIBRARIES(xi chckXi)
INSTALL(TARGETS xi DESTINATION lib)

# compile tools
ADD_EXECUTABLE(xi-info xi-info.c)
TARGET_LINK_LIBRARIES(xi-info xi)
INSTALL(TARGETS xi-info DESTINATION bin)
